Fix NewTrigger schema
