# generated/fiberplane_api/src/models/mod.rs
@@ -44,10 +44,8 @@ pub mod new_pinned_notebook;
 pub use self::new_pinned_notebook::NewPinnedNotebook;
 pub mod new_proxy;
 pub use self::new_proxy::NewProxy;
-pub mod new_trigger_with_template_body;
-pub use self::new_trigger_with_template_body::NewTriggerWithTemplateBody;
-pub mod new_trigger_with_template_url;
-pub use self::new_trigger_with_template_url::NewTriggerWithTemplateUrl;
+pub mod new_trigger;
+pub use self::new_trigger::NewTrigger;
 pub mod notebook;
 pub use self::notebook::Notebook;
 pub mod notebook_data_source;
